# 32_2_movie_data_analysis

./: CMakeLists.txt  main.cpp
